<resources>
    <string name="app_name">Winter Sweets</string>
    <string name="demo_smaller" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="demo_small" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="ok">OK</string>
    <string name="app_exit_message">Press back again to exit the app</string>
    <string name="required_permission">Required Permission</string>
    <string name="notification_permission_message">App uses notification to communicate to you for match alerts and general notification, Please grant access to notification</string>
    <string name="overlay_permission_message">In order to continue playing game app needs permission to show earning view over other apps.</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="update_title">New app version</string>
    <string name="update_force_update_message">Please update your app version to our latest version in order to continue.</string>
    <string name="update">Update</string>
    <string name="currently_ads_are_not_available">Currently ads are not available</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="seems_we_are_experiencing_some_technical_issues_at_the_moment_please_check_back_later">Seems we are experiencing some technical issues at the moment, please check back later.</string>
    <string name="loading">Loading, please wait…</string>
    <string name="username">User Name</string>
    <string name="your_name">Your Name</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="choose_your_avatar">Choose Your Avatar</string>
    <string name="choose_preferred_languages">Choose Your Preferred Language</string>
    <string name="english_is_pre_selected">(English is pre-selected)</string>
    <string name="let_s_set_up_your_account">Let\'s setup your account</string>
    <string name="next">Next</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_select_your_country">Please select your country</string>
    <string name="sending">Sending..</string>
    <string name="choose_your_country">Choose Your Country</string>
    <string name="type_to_search">Type to search</string>
    <string name="finish">Finish</string>
    <string name="welcome">Welcome</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_up_effortlessly_using_your_google_account">Sign up using your Google account</string>
    <string name="log_in_with_google">Sign up with google</string>
    <string name="by_clicking_the_continue_button_you_agree_with_our_terms_and_conditions_and_our_privacy_policy">By signing up, you agree to App\'s Terms and conditions, and our Privacy policy.</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="failed_to_authenticate_user">Failed to authenticate user</string>
    <string name="please_enter_your_message">Please enter your message</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="share_your_app_experience_your_input_is_crucial_for_ongoing_improvement">Share your app experience your input is crucial for ongoing improvement.</string>
    <string name="or">Or</string>
    <string name="rate_us_title">Did you like our app?</string>
    <string name="rate_us_message">We\'d love to hear from you! Let us know if you enjoyed the app and share your thoughts.</string>
    <string name="google_play_rate_title">Rate us on Google Play!</string>
    <string name="google_play_rate_message">Thanks for liking the app!You can rate us at Google Play store</string>
    <string name="rate_us">Rate us</string>
    <string name="thank_you_for_your_feedback">Thank You for your feedback!</string>
    <string name="thank_you_for_your_feedback_message">We’re always trying to improve what we do and your feedback is invaluable! Keep your app up to date for the latest features and performance improvements.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="back_to_app">Back to app</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="withdraw">Withdraw</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_message">Are you sure want to delete your account? If you\'re sure you want to proceed, please click on yes button for the further process. If you do not wish to delete your account, no further action is required.</string>
    <string name="delete_account_desc">Your account will be deleted soon and your current app session will be reset immediately.We are highly appreciated for your time for our application</string>
    <string name="contact_us">Contact Us</string>
    <string name="you_can_consult_our_terms_conditions">You can consult our Terms &amp; Conditions</string>
    <string name="customize_your_profile_your_way">Customize your profile your way</string>
    <string name="you_can_consult_our_privacy_policy">You can consult our Privacy Policy</string>
    <string name="shoot_us_a_message">Shoot us a message</string>
    <string name="we_ll_miss_you_if_you_leave_us">We\'ll miss you if you leave us</string>
    <string name="your_profile_was_updated_successfully">Your profile was updated successfully</string>
    <string name="save">Save</string>
    <string name="continue_">Continue</string>
    <string name="daily_earning_limit_reached">Daily earning limit reached</string>
    <string name="you_have_reached_the_daily_earning_limit_in_this_app">You have reached daily earning limit in this app for today, but you can still continue with playing game or to continue earning, use our other apps.</string>
    <string name="your_message">Your Message</string>
    <string name="offers">Offers</string>
    <string name="referral">Referral</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="notifications">Notifications</string>
    <string name="no_new_notifications_have_been_received_yet">No new notifications\nhave been received yet</string>
    <string name="settings">Settings</string>
    <string name="reward">Reward</string>
    <string name="sign_up">Sing Up</string>
    <string name="get_special_rewards">Get special reward</string>
    <string name="get_special_rewards_desc">You can get your reward from here</string>
    <string name="input_your_referral_code">Input your referral code</string>
    <string name="referral_code">Referral code</string>
    <string name="skip">Skip</string>
    <string name="enter_referral_desc">Enter the code to unlock referral rewards</string>
    <string name="languages">Languages</string>
    <string name="great">Great</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="enter_the_code_to_unlock">Enter the code to unlock referral rewards</string>
    <string name="you_have_successfully_completed_a_session_and_won">You have successfully completed a session and won</string>
    <string name="your_feedback_message">Please take a moment to provide us with feedback and let us know what went wrong.</string>
    <string name="total_time">Time</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="usage_stats">Usage Stats</string>
    <string name="tutorial">Tutorial</string>
    <string name="check_out_our_tutorials_for_app_clarity">Check out our tutorials for app clarity</string>
    <string name="error_socket_timeout">Timeout, Might be Server not responding</string>
    <string name="error_unauthorised_user">Unauthorised User</string>
    <string name="error_forbidden">Forbidden</string>
    <string name="error_internal_error">Internal Server Error</string>
    <string name="error_bad_request">Bad Request</string>
    <string name="error_unavailable">Our servers are experiencing downtime as part of maintenance</string>
    <string name="error_network">Application requires network connection to perform operations. Please check your network connection and try again.</string>
    <string name="error_something_went_wrong">Something Went Wrong</string>
    <string name="collect">Collect</string>
    <string name="menage_your_collections">Menage your collects</string>
    <string name="earnings">Earnings</string>
    <string name="delete_account_">Delete account?</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="delete">Delete</string>
    <string name="feedback_title">Help us Improve!</string>
    <string name="you_are_so_close">You are so close!</string>
    <string name="you_are_now_a">You Are now a</string>
    <string name="level">Level</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="show_user_statistics">Show user statistics</string>
    <string name="show_user_statistics_message">You can see statistics of the user</string>
    <string name="total_earning">Total Earning</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboard_has_currently_no_standings">No users are currently standing in leaderboard.</string>
    <string name="leaderboard_data_not_available">Leaderboard data is not available at this time. Thank you for your patience!</string>
    <string name="leaderboard_message">You can see here top 20 users based on spent time</string>
    <string name="overlay_message">Growing up is hard, love. Otherwise, everyone would do it.</string>
    <string name="time">Time</string>
    <string name="progress_text_earning_mode">You are %1$s%% away from gaining 1 coin</string>
    <string name="ending_session">Ending Session?</string>
    <string name="session_end_message">You\'ve navigated the chaos like a true survivor. Before you go, grab your rewards and prepare for the next adventure. We’ll be waiting for you soon—stay sharp!</string>
    <string name="session_ended_title">Wild growth, amazing strength.</string>
    <string name="session_ended_message">Congratulations, Survivor! You\'ve made it through. Your efforts have paid off—claim your rewards and gear up for the next challenge.</string>
    <string name="choose_a_pet">choose a pet</string>
    <string name="loading_your_wild_companions_message">Loading your wild companions… Get ready to explore, care for, and bond with your new exotic friends!</string>
    <string name="loading_your_wild_companions">Loading your wild companions</string>
    <string name="wild_companions">wild companions</string>
    <string name="start">Start</string>
    <string name="next_level">Next level</string>
    <string name="offer_app_name">Offerwall</string>
    <string name="earn_more">Earn More</string>
    <string name="splash_tag_line">PLAY \n EVOLVE AND COLLECT REWARDS</string>
    <string name="score">Score</string>
    <string name="away_n_from_1_n_coin">Away \nfrom 1 coin</string>
    <string name="referrals">Referrals</string>
    <string name="credits">Credits</string>
    <string name="active_users">Active Users</string>
    <string name="data_syncing">Data syncing....</string>
</resources>