<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="country"
            type="String" />

        <variable
            name="user"
            type="com.app.development.winter.shared.model.User" />

        <variable
            name="config"
            type="com.app.development.winter.shared.model.UserConfig" />

        <variable
            name="language"
            type="com.app.development.winter.ui.language.model.Language" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layoutToolbar"
            layout="@layout/layout_toolbar"
            app:subTitle="@{@string/let_s_set_up_your_account}" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutToolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_main_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--Guideline of the layout-->

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineTop"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_begin="0dp"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_begin="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_end="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_end="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent" />
                <!--Other part of the layout-->


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtChooseAvatar"
                    style="@style/FontSecondaryBold.TextColor.Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:gravity="center"
                    android:text="@string/choose_your_avatar"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintEnd_toStartOf="@+id/btnNextAvatar"
                    app:layout_constraintStart_toEndOf="@+id/btnPreviousAvatar"
                    app:layout_constraintTop_toBottomOf="@id/avatarCarousel" />

                <com.app.development.winter.shared.views.carouselpager.CarouselViewPager
                    android:id="@+id/avatarCarousel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    app:hasAlphaOnItem="false"
                    app:itemSpace="1.80"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toEndOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/guidelineTop"
                    app:scaleFactor="0.5" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnPreviousAvatar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:adjustViewBounds="true"
                    android:onClick="@{clickListener::onClick}"
                    android:setBounceSelector="@{true}"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/txtChooseAvatar"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toTopOf="@+id/txtChooseAvatar"
                    app:srcCompat="@drawable/ic_previous" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnNextAvatar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:adjustViewBounds="true"
                    android:onClick="@{clickListener::onClick}"
                    android:setBounceSelector="@{true}"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintTop_toTopOf="@+id/btnPreviousAvatar"
                    app:srcCompat="@drawable/ic_next" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblUserName"
                    style="@style/FontSecondaryBold.TextColor.Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/your_name"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/txtChooseAvatar" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserName"
                    style="@style/Widget.Input.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/username"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:setValue="@{user.name}"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/lblUserName" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblCountry"
                    style="@style/FontSecondaryBold.TextColor.Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/country"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="@id/lblUserName"
                    app:layout_constraintStart_toStartOf="@+id/lblUserName"
                    app:layout_constraintTop_toBottomOf="@id/edtUserName" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCountry"
                    style="@style/Widget.Input.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/country"
                    android:onClick="@{(v)->clickListener.onClick(v)}"
                    android:setValue="@{country}"
                    app:drawableEndCompat="@drawable/ic_arrow_down"
                    app:layout_constraintEnd_toEndOf="@id/edtUserName"
                    app:layout_constraintStart_toStartOf="@+id/edtUserName"
                    app:layout_constraintTop_toBottomOf="@id/lblCountry" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblLanguage"
                    style="@style/FontSecondaryBold.TextColor.Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/languages"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="@id/lblUserName"
                    app:layout_constraintStart_toStartOf="@+id/lblUserName"
                    app:layout_constraintTop_toBottomOf="@id/edtCountry" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblLanguageHint"
                    style="@style/FontPrimaryRegular.TextColor.Secondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/english_is_pre_selected"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextSecondaryInverse"
                    android:textSize="@dimen/_8ssp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/lblUserName"
                    app:layout_constraintStart_toStartOf="@+id/lblUserName"
                    app:layout_constraintTop_toBottomOf="@id/lblLanguage" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLanguage"
                    style="@style/Widget.Input.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/language"
                    android:onClick="@{(v)->clickListener.onClick(v)}"
                    android:setValue="@{language.name}"
                    app:drawableEndCompat="@drawable/ic_arrow_down"
                    app:layout_constraintEnd_toEndOf="@id/edtUserName"
                    app:layout_constraintStart_toStartOf="@+id/edtUserName"
                    app:layout_constraintTop_toBottomOf="@id/lblLanguageHint" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSend"
                    style="@style/Widget.Button.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:onClick="@{(v)->clickListener.onClick(v)}"
                    android:text="@string/next"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/edtLanguage"
                    app:layout_constraintVertical_bias="1.0" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/progressView"
                    style="@style/ProgressBarHorizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:visibility="invisible"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/guidelineBottom"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>